--- a/crud/templates/web/admin/login_admin.html
+++ b/crud/templates/web/admin/login_admin.html
@@ -23,12 +23,13 @@
 
             <div>
                 <label for="password" class="block text-xs text-gray-600 mb-1">Password</label>
-                <input type="password" id="password" name="password" required
+                <input type="password" id="password" name="password" required minlength="8"
                     class="w-full px-2 py-1 border rounded text-sm focus:outline-none focus:ring-2 focus:ring-blue-600
                     {% if error_type == 'password' %}border-red-500{% endif %}">
                 {% if error_type == 'password' %}
                     <p class="text-red-500 text-xs mt-1">{{ error }}</p>
                 {% endif %}
+                <p class="text-gray-500 text-xs mt-1">Password must be at least 8 characters long</p>
             </div>
 
             <button type="submit" 
